All endpoints supporting pagination report this in OpenAPI spec, consolidated (temporary) date filtering and pagination code, fakeData now sends 'true' set of known sounds
